--- a/index.html
+++ b/index.html
@@ -1,12 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&display=swap" rel="stylesheet">
     <title>CV en ligne</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>Talarek-Viegas Cléo</h1>
+    <header>
+        <h1>Talarek-Viegas Cléo</h1>
+        <img src="image/image1.jpg" alt="ma photo de profil">
+    </header>
+    <main>
+        <section id="Skills">
+            <h2>Mes Compétence</h2>
+            <ul>
+                <li>Anglais</li>
+                <li>World</li>
+                <li>Python</li>
+                <li>Exel</li>
+            </ul>
+        </section>
+        <section id="xp">
+            <h2>Mon Experience</h2>
+            <p>Hotesse d'acueuil</p>
+            <p>moniteur de tenis</p>
+            <p>Stage ouvrier à l'etranger</p>
+        </section>
+        <section id="Éducation">
+            <h2>Ma formation</h2>
+            <p>Obtension du Baccaloreat</p>
+            <p>Bachelor commerce et inge</p>
+        </section>
+    </main>
+
 </body>
+
 </html>
